# Choose-Your-Own-Adventure

./: .gitignore
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  models.py  story_generator.py
backend/app/models/: job.py  story.py
backend/app/routers/: job.py  story.py
backend/app/schemas/: job.py  story.py
frontend/: vite.config.js
frontend/src/: App.jsx
frontend/src/components/: LoadingStatus.jsx  StoryGame.jsx  StoryGenerator.jsx  StoryLoader.jsx
